@@ -974,6 +974,7 @@ static int pbsd_init_job(
 
   {
   unsigned int d;
+  struct work_task *pwt;
 
   pjob->ji_momhandle = -1;
 
@@ -1058,7 +1059,12 @@ static int pbsd_init_job(
 
       /* resend rtc */
 
-      set_task(WORK_Immed,0,resume_net_move,(void *)pjob);
+      pwt = set_task(WORK_Immed,0,resume_net_move,(void *)pjob);
+
+      if (pwt)
+        {
+        append_link(&pjob->ji_svrtask,&pwt->wt_linkobj,pwt);
+        }
 
       break;
 		
@@ -1118,7 +1124,12 @@ static int pbsd_init_job(
 
       apply_job_delete_nanny(pjob,time_now + 60);
 
-      set_task(WORK_Immed,0,on_job_exit,(void *)pjob);
+      pwt = set_task(WORK_Immed,0,on_job_exit,(void *)pjob);
+
+      if (pwt)
+        {
+        append_link(&pjob->ji_svrtask,&pwt->wt_linkobj,pwt);
+        }
 
       pbsd_init_reque(pjob,KEEP_STATE);
 
@@ -1129,7 +1140,12 @@ static int pbsd_init_job(
       /* NOOP - completed jobs are already purged above */
       /* for some reason, this doesn't actually work */
 
-      set_task(WORK_Immed,0,on_job_exit,(void *)pjob);
+      pwt = set_task(WORK_Immed,0,on_job_exit,(void *)pjob);
+
+      if (pwt)
+        {
+        append_link(&pjob->ji_svrtask,&pwt->wt_linkobj,pwt);
+        }
 
       pbsd_init_reque(pjob,KEEP_STATE);
 
@@ -1138,7 +1154,14 @@ static int pbsd_init_job(
     case JOB_SUBSTATE_RERUN:
 
       if (pjob->ji_qs.ji_state == JOB_STATE_EXITING)
-        set_task(WORK_Immed,0,on_job_rerun,(void *)pjob);
+        {
+        pwt = set_task(WORK_Immed,0,on_job_rerun,(void *)pjob);
+
+        if (pwt)
+          {
+          append_link(&pjob->ji_svrtask,&pwt->wt_linkobj,pwt);
+          }
+        }
 
       pbsd_init_reque(pjob,KEEP_STATE);
 
@@ -1147,7 +1170,12 @@ static int pbsd_init_job(
     case JOB_SUBSTATE_RERUN1:
     case JOB_SUBSTATE_RERUN2:
 
-      set_task(WORK_Immed,0,on_job_rerun,(void *)pjob);
+      pwt = set_task(WORK_Immed,0,on_job_rerun,(void *)pjob);
+
+      if (pwt)
+        {
+        append_link(&pjob->ji_svrtask,&pwt->wt_linkobj,pwt);
+        }
 
       pbsd_init_reque(pjob,KEEP_STATE);
 
