@@ -25,6 +25,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   c - using depend=syncwith crashed pbs_server
   f - may now specify umask to use while creating stderr and stdout spools
       e.g. qsub -W umask=22
+  c - races with down nodes and purging jobs crashed pbs_server
 
 2.1.2
 
